generador de banners

--- a/index.html
+++ b/index.html
@@ -175,22 +175,22 @@
     <div class="carousel">
         <div class="carousel-slides">
             <div class="slide active">
-            <img src="images/banner_logo.webp" alt="Logo" onerror="this.onerror=null; this.src='images/nomedia_trans.png';">
+                <img src="images/banner_logo.webp" alt="Logo" onerror="this.onerror=null; this.src='images/nomedia_trans.png';">
             </div>
             <div class="slide">
-            <img src="images/3019ba49aa5fa89bbd2d9d94eb4eddf1f90c42c5_VOucher.jpg" alt="Dia del niño" onerror="this.onerror=null; this.src='images/nomedia_trans.png';">
+                <img src="carrusel/preview-12cuotas_20754831.png" alt="Dia del niño" onerror="this.onerror=null; this.src='images/nomedia_trans.png';">
             </div>
             <div class="slide">
-            <img src="images/a100c5fbc56413e6770dbb35a2e35922a57f4341_VOucher2.jpg" alt="Tablet" loading="lazy" onerror="this.onerror=null; this.src='images/nomedia_trans.png';">
+                <img src="carrusel/preview-contado_2075258.png" alt="Tablet" loading="lazy" onerror="this.onerror=null; this.src='images/nomedia_trans.png';">
             </div>
             <div class="slide">
-            <img src="images/televisores_ofertas_aoc.jpg" alt="Televisores oferta AOC" loading="lazy" onerror="this.onerror=null; this.src='images/nomedia_trans.png';">
+                <img src="carrusel/Cocina_Florencia_5838_SemiIndustrial_Inox_56_cm_multigas_svalvula.png" alt="Televisores oferta AOC" loading="lazy" onerror="this.onerror=null; this.src='images/nomedia_trans.png';">
             </div>
             <div class="slide">
-                <img src="carrusel/lavado_perfecto_1.jpg" alt="Kohinoor Banner" loading="lazy" onerror="this.onerror=null; this.src='images/nomedia_trans.png';">
+                <img src="carrusel/TV_LED_RCA_55_G55P6UHDF_Google_4K_Smart.png" alt="Kohinoor Banner" loading="lazy" onerror="this.onerror=null; this.src='images/nomedia_trans.png';">
             </div>
             <div class="slide">
-                <img src="carrusel/lavado_perfecto_2.jpg" alt="Kohinoor Banner" loading="lazy" onerror="this.onerror=null; this.src='images/nomedia_trans.png';">
+                <img src="carrusel/Vent_Pie_Liliana_VVP20P_20_5_aspas_plasticas_90w.png" alt="Kohinoor Banner" loading="lazy" onerror="this.onerror=null; this.src='images/nomedia_trans.png';">
             </div>
             <div class="slide">
                 <img src="carrusel/HeladeraSamsungRT42_cuota_simple.webp" alt="Heladera Samsung RT42" loading="lazy" onerror="this.onerror=null; this.src='images/nomedia_trans.png';">
