--- a/index.html
+++ b/index.html
@@ -184,19 +184,19 @@
                 <img src="carrusel/preview-contado_2075258.png" alt="Tablet" loading="lazy" onerror="this.onerror=null; this.src='images/nomedia_trans.png';">
             </div>
             <div class="slide">
-                <img src="carrusel/Cocina_Florencia_5838_SemiIndustrial_Inox_56_cm_multigas_svalvula.png" alt="Televisores oferta AOC" loading="lazy" onerror="this.onerror=null; this.src='images/nomedia_trans.png';">
+                <img src="carrusel/Cocina_Florencia_5838_SemiIndustrial_Inox_56_cm_multigas_svalvula.png" alt="Florencia semi industrial" loading="lazy" onerror="this.onerror=null; this.src='images/nomedia_trans.png';">
             </div>
             <div class="slide">
-                <img src="carrusel/TV_LED_RCA_55_G55P6UHDF_Google_4K_Smart.png" alt="Kohinoor Banner" loading="lazy" onerror="this.onerror=null; this.src='images/nomedia_trans.png';">
+                <img src="carrusel/TV_LED_RCA_55_G55P6UHDF_Google_4K_Smart.png" alt="RCA 55" loading="lazy" onerror="this.onerror=null; this.src='images/nomedia_trans.png';">
             </div>
             <div class="slide">
-                <img src="carrusel/Vent_Pie_Liliana_VVP20P_20_5_aspas_plasticas_90w.png" alt="Kohinoor Banner" loading="lazy" onerror="this.onerror=null; this.src='images/nomedia_trans.png';">
+                <img src="carrusel/Vent_Pie_Liliana_VVP20P_20_5_aspas_plasticas_90w.png" alt="Liliana VP20" loading="lazy" onerror="this.onerror=null; this.src='images/nomedia_trans.png';">
             </div>
             <div class="slide">
-                <img src="carrusel/HeladeraSamsungRT42_cuota_simple.webp" alt="Heladera Samsung RT42" loading="lazy" onerror="this.onerror=null; this.src='images/nomedia_trans.png';">
+                <img src="carrusel/Freidora_Steel_Home_sin_aceite_Kentuchy_5lts_1500w_digital.png" alt="Freidoras Kentuchy" loading="lazy" onerror="this.onerror=null; this.src='images/nomedia_trans.png';">
             </div>
             <div class="slide">
-                <img src="carrusel/Lavarropas_BGH.webp" alt="Kohinoor Banner" loading="lazy" onerror="this.onerror=null; this.src='images/nomedia_trans.png';">
+                <img src="carrusel/Notebook_Daewoo_Core_i3_8256_SSD_156_1025G1_FHD_Win_11.png" alt="Notebook Daewoo" loading="lazy" onerror="this.onerror=null; this.src='images/nomedia_trans.png';">
             </div>
         </div>
         <button class="carousel-btn prev">❮</button>
