--- a/boton.html
+++ b/boton.html
@@ -71,6 +71,35 @@
     inset 3px 3px 8px rgba(255,255,255,0.4),
     0 2px 6px rgba(0,0,0,0.9);
 }
+@media (max-width: 600px) {
+  body {
+    background: #000;
+    margin: 0;
+  }
+  header, .footer, .config {
+    display: none; /* ocultamos controles extra en modo móvil */
+  }
+  .wrap {
+    max-width: 100%;
+    margin: 0;
+    padding: 10px;
+    border-radius: 0;
+    background: #111;
+    height: 100vh;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+  .grid {
+    grid-template-columns: repeat(2, 1fr);
+    gap: 20px;
+  }
+  .arcade-button {
+    width: 140px;
+    height: 140px;
+  }
+}
+
 
   </style>
 </head>
@@ -215,8 +244,11 @@
             if(btnCfg.playing){ stopSound(idx, el); } else { startSound(idx, el); }
           } else { startSound(idx, el); }
         }
-        el.addEventListener('pointerdown', async ev=>{ ev.preventDefault(); playStart(); });
-        el.addEventListener('pointerup', ()=>{ if(modeSelect.value==='trigger') stopSound(idx, el); });
+        el.addEventListener('click', ev => {
+  ev.preventDefault();
+  startSound(idx, el); // cada click dispara el sonido completo
+});
+
 
         grid.appendChild(el);
       });
