--- a/boton.html
+++ b/boton.html
@@ -48,30 +48,6 @@
     .config{margin-top:12px;padding:12px;border-radius:8px;background:var(--glass);border:1px solid rgba(255,255,255,0.02)}
     .hint{font-size:13px;color:rgba(255,255,255,0.7)}
     @media (max-width:800px){.grid{grid-template-columns:repeat(2,1fr)}.big{grid-column:span 1}}
-    .arcade-button {
-  width: 120px;
-  height: 120px;
-  border-radius: 50%;
-  border: 4px solid #222;
-  background: radial-gradient(circle at 30% 30%, #fff, transparent 40%),
-              radial-gradient(circle at 70% 70%, rgba(0,0,0,0.4), transparent 40%),
-              linear-gradient(to bottom, #ff4d4d, #b30000);
-  box-shadow: 
-    inset -5px -5px 10px rgba(0,0,0,0.6),
-    inset 5px 5px 10px rgba(255,255,255,0.4),
-    0 6px 12px rgba(0,0,0,0.8);
-  cursor: pointer;
-  transition: transform 0.1s, box-shadow 0.1s;
-}
-
-.arcade-button:active {
-  transform: translateY(4px);
-  box-shadow: 
-    inset -3px -3px 8px rgba(0,0,0,0.6),
-    inset 3px 3px 8px rgba(255,255,255,0.4),
-    0 2px 6px rgba(0,0,0,0.9);
-}
-
   </style>
 </head>
 <body>
@@ -215,11 +191,8 @@
             if(btnCfg.playing){ stopSound(idx, el); } else { startSound(idx, el); }
           } else { startSound(idx, el); }
         }
-        el.addEventListener('click', ev => {
-  ev.preventDefault();
-  startSound(idx, el); // cada click dispara el sonido completo
-});
-
+        el.addEventListener('pointerdown', async ev=>{ ev.preventDefault(); playStart(); });
+        el.addEventListener('pointerup', ()=>{ if(modeSelect.value==='trigger') stopSound(idx, el); });
 
         grid.appendChild(el);
       });
