--- a/calculadora.html
+++ b/calculadora.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Calculadora Center Hogar</title>
-  <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="calculadora.css">
   <link rel="icon" href="images/logo.webp" type="image/x-icon">
 </head>
 <body>
