--- a/calculadora.html
+++ b/calculadora.html
@@ -3,9 +3,13 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="theme-color" content="#667eea">
+  <meta name="apple-mobile-web-app-capable" content="yes">
+  <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
   <title>Calculadora Center Hogar</title>
   <link rel="stylesheet" href="calculadora.css">
   <link rel="icon" href="images/logo.webp" type="image/x-icon">
+  <link rel="manifest" href="/manifest.json">
 </head>
 <body>
   <div class="calculadora">
@@ -85,6 +89,21 @@
     </div>
   </div>
 
-  <script src="scripts.js"></script>
+  <script src="calculadora.js"></script>
+  <script>
+  // Registrar Service Worker
+  if ('serviceWorker' in navigator) {
+    window.addEventListener('load', () => {
+      navigator.serviceWorker.register('/sw.js').then(
+        (registration) => {
+          console.log('Service Worker registrado:', registration);
+        },
+        (error) => {
+          console.log('Error al registrar Service Worker:', error);
+        }
+      );
+    });
+  }
+</script>
 </body>
 </html>
