--- a/calculadora.html
+++ b/calculadora.html
@@ -9,7 +9,8 @@
   <title>Calculadora Center Hogar</title>
   <link rel="stylesheet" href="calculadora.css">
   <link rel="icon" href="images/logo.webp" type="image/x-icon">
-  <link rel="manifest" href="/manifest.json">
+  <!-- MANIFEST -->
+<link rel="manifest" href="/manifest.json">
 </head>
 <body>
   <div class="calculadora">
@@ -90,18 +91,13 @@
   </div>
 
   <script src="calculadora.js"></script>
-  <script>
-  // Registrar Service Worker
+ <!-- SERVICE WORKER -->
+<script>
   if ('serviceWorker' in navigator) {
     window.addEventListener('load', () => {
-      navigator.serviceWorker.register('/sw.js').then(
-        (registration) => {
-          console.log('Service Worker registrado:', registration);
-        },
-        (error) => {
-          console.log('Error al registrar Service Worker:', error);
-        }
-      );
+      navigator.serviceWorker.register('/sw.js')
+        .then(reg => console.log('SW registrado:', reg))
+        .catch(err => console.log('Error SW:', err));
     });
   }
 </script>
