--- a/calculadora.html
+++ b/calculadora.html
@@ -10,7 +10,7 @@
   <link rel="stylesheet" href="calculadora.css">
   <link rel="icon" href="images/logo.webp" type="image/x-icon">
   <!-- MANIFEST -->
-<link rel="manifest" href="/manifest.json">
+<link rel="manifest" href="manifest.json">
 </head>
 <body>
   <div class="calculadora">
@@ -95,7 +95,7 @@
 <script>
   if ('serviceWorker' in navigator) {
     window.addEventListener('load', () => {
-      navigator.serviceWorker.register('/sw.js')
+      navigator.serviceWorker.register('sw.js')
         .then(reg => console.log('SW registrado:', reg))
         .catch(err => console.log('Error SW:', err));
     });
