--- a/calculadora.html
+++ b/calculadora.html
@@ -19,9 +19,10 @@
 
     <div class="fila">
       <button class="btn-ac" onclick="borrar()">AC</button>
-      <button class="btn-func" onclick="calcularDescuento()">DESC</button>
+      <button class="btn-func" onclick="calcularPorcentaje()">%</button>
       <button class="btn-func" onclick="abrirHistorial()">HISTORIAL</button>
       <button class="btn-ac" onclick="limpiarVisor()">C</button>
+      <button class="btn-ac" onclick="borrarUltimo()">←</button>
     </div>
 
     <div class="fila">
