--- a/calculadora.html
+++ b/calculadora.html
@@ -11,75 +11,93 @@
   <link rel="stylesheet" href="calculadora.css">
   <link rel="icon" href="images/logo.webp" type="image/x-icon">
   <!-- MANIFEST -->
-<link rel="manifest" href="manifest.json">
+  <link rel="manifest" href="manifest.json">
 </head>
 <body>
   <div class="calculadora">
-    <input type="text" id="visor" readonly placeholder="0">
-
-    <div class="fila">
-      <button class="btn-ac" onclick="borrar()">AC</button>
-      <button class="btn-func" onclick="calcularPorcentaje()">%</button>
-      <button class="btn-func" onclick="abrirHistorial()">HISTORIAL</button>
-      <button class="btn-ac" onclick="limpiarVisor()">C</button>
-      <button class="btn-ac" onclick="borrarUltimo()">←</button>
+    <div class="tabs">
+      <button class="tab-btn active" data-tab="calculadora">
+        <span>Calculadora</span>
+      </button>
+      <button class="tab-btn" data-tab="promociones">
+        <span>Promociones</span>
+      </button>
     </div>
 
-    <div class="fila">
-      <button class="btn-cuota" onclick="calcularCuotas(3)">3 cuotas</button>
-      <input id="interes3" class="interes" type="number" value="0">
-      <span class="porc">%</span>
+    <div id="tab-calculadora" class="tab-content active">
+      <input type="text" id="visor" readonly placeholder="0">
+
+      <div class="fila">
+        <button class="btn-ac" onclick="borrar()">AC</button>
+        <button class="btn-func" onclick="calcularPorcentaje()">%</button>
+        <button class="btn-func" onclick="abrirHistorial()">HISTORIAL</button>
+        <button class="btn-ac" onclick="limpiarVisor()">C</button>
+        <button class="btn-ac" onclick="borrarUltimo()">←</button>
+      </div>
+
+      <div class="fila">
+        <button class="btn-cuota" onclick="calcularCuotas(3)">3 cuotas</button>
+        <input id="interes3" class="interes" type="number" value="0">
+        <span class="porc">%</span>
+      </div>
+
+      <div class="fila">
+        <button class="btn-cuota" onclick="calcularCuotas(6)">6 cuotas</button>
+        <input id="interes6" class="interes" type="number" value="0">
+        <span class="porc">%</span>
+      </div>
+
+      <div class="fila">
+        <button class="btn-cuota" onclick="calcularCuotas(9)">9 cuotas</button>
+        <input id="interes9" class="interes" type="number" value="0">
+        <span class="porc">%</span>
+      </div>
+
+      <div class="fila">
+        <button class="btn-cuota" onclick="calcularCuotas(12)">12 cuotas</button>
+        <input id="interes12" class="interes" type="number" value="5">
+        <span class="porc">%</span>
+      </div>
+
+      <div class="fila">
+        <button onclick="clickBoton('7')">7</button>
+        <button onclick="clickBoton('8')">8</button>
+        <button onclick="clickBoton('9')">9</button>
+        <button class="btn-op" onclick="clickBoton('/')">÷</button>
+      </div>
+
+      <div class="fila">
+        <button onclick="clickBoton('4')">4</button>
+        <button onclick="clickBoton('5')">5</button>
+        <button onclick="clickBoton('6')">6</button>
+        <button class="btn-op" onclick="clickBoton('*')">×</button>
+      </div>
+
+      <div class="fila">
+        <button onclick="clickBoton('1')">1</button>
+        <button onclick="clickBoton('2')">2</button>
+        <button onclick="clickBoton('3')">3</button>
+        <button class="btn-op" onclick="clickBoton('-')">−</button>
+      </div>
+
+      <div class="fila">
+        <button onclick="clickBoton('0')">0</button>
+        <button onclick="clickBoton('000')">000</button>
+        <button class="btn-op" onclick="clickBoton('+')">+</button>
+        <button class="btn-op" onclick="operaciones()">=</button>
+      </div>
+
+      <div class="fila">
+        <button class="btn-guardar" onclick="guardarValorManual()">GUARDAR</button>
+        <button class="btn-guardar" onclick="volverValorManual()">VOLVER</button>
+      </div>
     </div>
 
-    <div class="fila">
-      <button class="btn-cuota" onclick="calcularCuotas(6)">6 cuotas</button>
-      <input id="interes6" class="interes" type="number" value="0">
-      <span class="porc">%</span>
-    </div>
-
-    <div class="fila">
-      <button class="btn-cuota" onclick="calcularCuotas(9)">9 cuotas</button>
-      <input id="interes9" class="interes" type="number" value="0">
-      <span class="porc">%</span>
-    </div>
-
-    <div class="fila">
-      <button class="btn-cuota" onclick="calcularCuotas(12)">12 cuotas</button>
-      <input id="interes12" class="interes" type="number" value="5">
-      <span class="porc">%</span>
-    </div>
-
-    <div class="fila">
-      <button onclick="clickBoton('7')">7</button>
-      <button onclick="clickBoton('8')">8</button>
-      <button onclick="clickBoton('9')">9</button>
-      <button class="btn-op" onclick="clickBoton('/')">÷</button>
-    </div>
-
-    <div class="fila">
-      <button onclick="clickBoton('4')">4</button>
-      <button onclick="clickBoton('5')">5</button>
-      <button onclick="clickBoton('6')">6</button>
-      <button class="btn-op" onclick="clickBoton('*')">×</button>
-    </div>
-
-    <div class="fila">
-      <button onclick="clickBoton('1')">1</button>
-      <button onclick="clickBoton('2')">2</button>
-      <button onclick="clickBoton('3')">3</button>
-      <button class="btn-op" onclick="clickBoton('-')">−</button>
-    </div>
-
-    <div class="fila">
-      <button onclick="clickBoton('0')">0</button>
-      <button onclick="clickBoton('000')">000</button>
-      <button class="btn-op" onclick="clickBoton('+')">+</button>
-      <button class="btn-op" onclick="operaciones()">=</button>
-    </div>
-
-    <div class="fila">
-      <button class="btn-guardar" onclick="guardarValorManual()">GUARDAR</button>
-      <button class="btn-guardar" onclick="volverValorManual()">VOLVER</button>
+    <div id="tab-promociones" class="tab-content">
+      <h2>Control de Promociones</h2>
+      <input type="text" id="codigoProducto" placeholder="Ingrese el código">
+      <button class="btn-verificar" onclick="verificarPromocion()">Verificar</button>
+      <p id="mensajePromocion"></p>
     </div>
   </div>
 
@@ -92,16 +110,17 @@
     </div>
   </div>
 
+  <script src="productos.js"></script>
   <script src="calculadora.js"></script>
- <!-- SERVICE WORKER -->
-<script>
-  if ('serviceWorker' in navigator) {
-    window.addEventListener('load', () => {
-      navigator.serviceWorker.register('sw.js')
-        .then(reg => console.log('SW registrado:', reg))
-        .catch(err => console.log('Error SW:', err));
-    });
-  }
-</script>
+  <!-- SERVICE WORKER -->
+  <script>
+    if ('serviceWorker' in navigator) {
+      window.addEventListener('load', () => {
+        navigator.serviceWorker.register('sw.js')
+          .then(reg => console.log('SW registrado:', reg))
+          .catch(err => console.log('Error SW:', err));
+      });
+    }
+  </script>
 </body>
 </html>
