--- a/producto.html
+++ b/producto.html
@@ -300,11 +300,11 @@ document.addEventListener('DOMContentLoaded', () => {
         texto: '6 Cuotas sin interés con todas las tarjetas', 
         precio: (precioLista / 6) 
     },
-    { 
-        cuotas: 9, 
-        texto: '9 Cuotas fijas con tarjeta de crédito Naranja X', 
-        precio: ((precioLista * 1.055) / 9) 
-    },
+    //{ 
+//        cuotas: 9, 
+//        texto: '9 Cuotas fijas con tarjeta de crédito Naranja X', 
+//        precio: ((precioLista * 1.055) / 9) 
+//    },
     { 
         cuotas: 12, 
         texto: '12 Cuotas fijas con tarjetas de crédito de banco', 
@@ -413,10 +413,10 @@ document.addEventListener('DOMContentLoaded', () => {
                 imgSrc = 'images/tarjetas_de_credito_2.png';
                 imgClass = 'cuota-card-icon';
             }
-            if (cuota.cuotas === 9) {
-                imgSrc = 'images/naranja_x.png';
-                imgClass = 'cuota-card-icon';
-            }
+///            if (cuota.cuotas === 9) {
+///                imgSrc = 'images/naranja_x.png';
+///                imgClass = 'cuota-card-icon';
+///            }
             if (cuota.cuotas === 12) {
                 imgSrc = 'images/tarjetas_de_credito.png';
                 imgClass = 'cuota-card-icon';
