--- a/calculadora.html
+++ b/calculadora.html
@@ -10,20 +10,18 @@
   <title>Calculadora Center Hogar</title>
   <link rel="stylesheet" href="calculadora.css">
   <link rel="icon" href="images/logo.webp" type="image/x-icon">
-  <!-- MANIFEST -->
   <link rel="manifest" href="manifest.json">
 </head>
 <body>
   <div class="calculadora">
+    <!-- TABS -->
     <div class="tabs">
-      <button class="tab-btn active" data-tab="calculadora">
-        <span>Calculadora</span>
-      </button>
-      <button class="tab-btn" data-tab="promociones">
-        <span>Promociones</span>
-      </button>
+      <button class="tab-btn active" data-tab="calculadora"><span>Calculadora</span></button>
+      <button class="tab-btn" data-tab="promociones"><span>Promociones</span></button>
+      <button class="tab-btn" data-tab="descuentos"><span>Descuentos</span></button>
     </div>
 
+    <!-- TAB: CALCULADORA -->
     <div id="tab-calculadora" class="tab-content active">
       <input type="text" id="visor" readonly placeholder="0">
 
@@ -93,15 +91,61 @@
       </div>
     </div>
 
+    <!-- TAB: PROMOCIONES -->
     <div id="tab-promociones" class="tab-content">
       <h2>Control de Promociones</h2>
       <input type="text" id="codigoProducto" placeholder="Ingrese el código">
       <button class="btn-verificar" onclick="verificarPromocion()">Verificar</button>
       <p id="mensajePromocion"></p>
     </div>
-  </div>
 
-  <!-- Modal de Historial -->
+    <!-- TAB: DESCUENTOS (AHORA DENTRO) -->
+    <div id="tab-descuentos" class="tab-content">
+      <div class="contenedor-descuentos">
+        <div class="seccion">
+          <h3>Calcular % de Descuento</h3>
+          <label>Precio de Lista:</label>
+          <input type="number" id="precioLista" step="0.01" placeholder="0.00">
+          <label>Precio con Descuento:</label>
+          <input type="number" id="precioDescuento" step="0.01" placeholder="0.00">
+          <button class="btn-calcular" onclick="calcularDescuento()">Calcular</button>
+          <h4 id="resultado">—</h4>
+          <button class="btn-copiar" onclick="copiarResultado()">Copiar %</button>
+        </div>
+
+        <div class="seccion">
+          <h3>Pago Mixto (15% off en contado)</h3>
+          <label>Pago en Contado:</label>
+          <input type="number" id="contado" step="0.01" placeholder="0.00">
+          <button class="btn-calcular" onclick="calcularPagoMixto()">Calcular</button>
+          <div class="resultados-mixtos">
+            <p>Total con 15% off: <span id="totalContado">-</span></p>
+            <p>Resto con descuento: <span id="restoContado">-</span></p>
+            <p>Resto a lista: <span id="restoLista">-</span></p>
+            <p><strong>Precio Final:</strong> <span id="precioFinal">-</span></p>
+            <p><strong>Descuento Total:</strong> <span id="descuento">0%</span></p>
+          </div>
+          <button class="btn-copiar" onclick="copiarResultados()">Copiar %</button>
+        </div>
+
+        <div class="seccion">
+          <h3>Desde Lista + Contado</h3>
+          <label>Parte a Lista:</label>
+          <input type="number" id="parteLista" step="0.01" placeholder="0.00">
+          <button class="btn-calcular" onclick="calcularDesdeLista()">Calcular</button>
+          <div class="resultados-mixtos">
+            <p>Base con 15% off: <span id="totalContado2">-</span></p>
+            <p>Parte con descuento: <span id="parteContado">-</span></p>
+            <p><strong>Precio Final:</strong> <span id="precioFinal2">-</span></p>
+            <p><strong>Descuento Total:</strong> <span id="descuento2">0%</span></p>
+          </div>
+          <button class="btn-copiar" onclick="copiarDescuento()">Copiar %</button>
+        </div>
+      </div>
+    </div>
+  </div> <!-- CIERRE CORRECTO DE .calculadora -->
+
+  <!-- MODAL HISTORIAL (FUERA, BIEN) -->
   <div id="modalHistorial" class="modal">
     <div class="modal-content">
       <span class="cerrar" onclick="cerrarHistorial()">×</span>
@@ -112,7 +156,6 @@
 
   <script src="productos.js"></script>
   <script src="calculadora.js"></script>
-  <!-- SERVICE WORKER -->
   <script>
     if ('serviceWorker' in navigator) {
       window.addEventListener('load', () => {
