Update print statement from 'Hello' to 'Goodbye'

--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
                 <img src="images/banner_logo.webp" alt="Logo" onerror="this.onerror=null; this.src='images/nomedia_trans.png';">
             </div>
             <div class="slide">
-                <img src="carrusel/preview-12cuotas_20754831.png" alt="Dia del niño" onerror="this.onerror=null; this.src='images/nomedia_trans.png';">
+                <img src="carrusel/Acond_Kanji_Portatil_5000_kw_KJHAA5000_Wifi.png" alt="Kanji portatil 5000w" onerror="this.onerror=null; this.src='images/nomedia_trans.png';">
             </div>
             <div class="slide">
                 <img src="carrusel/preview-contado_2075258.png" alt="Tablet" loading="lazy" onerror="this.onerror=null; this.src='images/nomedia_trans.png';">
@@ -583,4 +583,5 @@ $(document).ready(function(){
 
 </script>
 </body>
+
 </html>
