--- a/contacto.html
+++ b/contacto.html
@@ -6,7 +6,7 @@
     <meta name="description" content="Contáctanos en Center Hogar Quilmes por teléfono, WhatsApp, email o visítanos en nuestro local.">
     <meta name="keywords" content="contacto, Center Hogar Quilmes, Electrodomesticos, Quilmes">
     <title>Contacto - Center Hogar Quilmes</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="css/styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Lora:wght@400;700&family=Roboto:wght@400;700&display=swap" rel="stylesheet">
     <link rel="icon" href="images/logo.webp" type="image/x-icon">
@@ -239,8 +239,8 @@
         </svg>
     </button>
 
-    <script src="productos.js"></script>
-    <script src="scripts.js"></script>
+    <script src="js/productos.js"></script>
+    <script src="js/scripts.js"></script>
     <script>
     // === Newsletter en página de Contacto ===
 document.addEventListener("DOMContentLoaded", function () {
