--- a/garantia.html
+++ b/garantia.html
@@ -6,7 +6,7 @@
     <meta name="description" content="Lee los Términos y Condiciones de Center Hogar Quilmes para conocer las reglas de uso de nuestro sitio y servicios.">
     <meta name="keywords" content="términos y condiciones, Center Hogar Quilmes, Electrodomesticos">
     <title>Políticas de garantías - Center Hogar Quilmes</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="css/styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Lora:wght@400;700&family=Roboto:wght@400;700&display=swap" rel="stylesheet">
     <link rel="icon" href="images/logo.webp" type="image/x-icon">
@@ -211,7 +211,7 @@
         </svg>
     </button>
 
-    <script src="productos.js"></script>
-    <script src="scripts.js"></script>
+    <script src="js/productos.js"></script>
+    <script src="js/scripts.js"></script>
 </body>
 </html>
