--- a/generar-banner.html
+++ b/generar-banner.html
@@ -3,10 +3,10 @@
 <head>
   <meta charset="UTF-8">
   <title>Generador de Banners</title>
-  <script src="productos.js"></script>
-  <script src="precios.js"></script>
+  <script src="js/productos.js"></script>
+  <script src="js/precios.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/html2canvas/1.4.1/html2canvas.min.js"></script>
-  <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="css/styles.css">
   <style>
     body {
       font-family: 'Roboto', Arial, sans-serif;
