--- a/presupuesto.html
+++ b/presupuesto.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Center Hogar Quilmes</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="css/styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Lora:wght@400;700&family=Roboto:wght@400;700&display=swap" rel="stylesheet">
     <link rel="icon" href="images/logo.webp" type="image/x-icon">
@@ -233,8 +233,8 @@
     </button>
 
     <!-- Scripts -->
-    <script src="productos.js"></script>
-    <script src="scripts.js"></script>
+    <script src="js/productos.js"></script>
+    <script src="js/scripts.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/PapaParse/5.3.2/papaparse.min.js"></script>
     <script>
 
@@ -242,7 +242,7 @@
 
 async function loadProducts() {
     try {
-        const response = await fetch('/productos.csv'); // Archivo en la raíz del proyecto
+        const response = await fetch('/Datos/productos.csv'); // Archivo en la raíz del proyecto
         const csvText = await response.text();
         products = parseCSV(csvText);
         console.log('Productos cargados:', products);
