--- a/privacidad.html
+++ b/privacidad.html
@@ -6,7 +6,7 @@
     <meta name="description" content="Conoce cómo Center Hogar Quilmes protege tus datos personales en nuestra Política de Privacidad.">
     <meta name="keywords" content="política de privacidad, Center Hogar Quilmes, datos personales">
     <title>Política de Privacidad - Center Hogar Quilmes</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="css/styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Lora:wght@400;700&family=Roboto:wght@400;700&display=swap" rel="stylesheet">
     <link rel="icon" href="images/logo.webp" type="image/x-icon">
@@ -228,7 +228,7 @@
         </svg>
     </button>
 
-    <script src="productos.js"></script>
-    <script src="scripts.js"></script>
+    <script src="js/productos.js"></script>
+    <script src="js/scripts.js"></script>
 </body>
 </html>
