--- a/busqueda.html
+++ b/busqueda.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Categoría - Center Hogar Quilmes</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="css/styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Lora:wght@400;700&family=Roboto:wght@400;700&display=swap" rel="stylesheet">
     <link rel="icon" href="images/logo.webp" type="image/x-icon">
@@ -251,9 +251,9 @@
     </button>
 
     <!-- Scripts -->
-<script src="precios.js"></script>
-<script src="productos.js"></script>
-<script src="scripts.js"></script>
+<script src="js/precios.js"></script>
+<script src="js/productos.js"></script>
+<script src="js/scripts.js"></script>
 <script>
 // Definir atributos filtrables por categoría
 const atributosPorCategoria = {
@@ -658,7 +658,7 @@ if (searchQuery) {
         `;
     } else {
         productosFiltrados.forEach(producto => {
-            // Obtener datos desde precios.js
+            // Obtener datos desde js/precios.js
             const datosDinamicos = precios && precios[producto.codigo] ? precios[producto.codigo] : { precio_tarjeta: 'No disponible', stock_sucursal: 0, stock_deposito: 0 };
             const precioLista = datosDinamicos.precio_tarjeta !== 'No disponible' ? parseFloat(datosDinamicos.precio_tarjeta) : null;
             const precioTextoLista = precioLista ? `$${precioLista.toLocaleString('es-AR')}` : 'Consultar precio';
@@ -712,7 +712,7 @@ searchInput.addEventListener('keypress', (e) => {
         filtrarProductos();
         suggestionsContainer.style.display = 'none';
         setTimeout(() => isProcessingSearch = false, 100); // Desbloquear tras un breve delay
-        e.preventDefault(); // Prevenir redirección de scripts.js
+        e.preventDefault(); // Prevenir redirección de js/scripts.js
     }
 });
 searchBtn.addEventListener('click', (e) => {
@@ -724,7 +724,7 @@ searchBtn.addEventListener('click', (e) => {
         filtrarProductos();
         suggestionsContainer.style.display = 'none';
         setTimeout(() => isProcessingSearch = false, 100);
-        e.preventDefault(); // Prevenir redirección de scripts.js
+        e.preventDefault(); // Prevenir redirección de js/scripts.js
     }
 });
 
