--- a/categoria.html
+++ b/categoria.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Categoría - Center Hogar Quilmes</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="css/styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Lora:wght@400;700&family=Roboto:wght@400;700&display=swap" rel="stylesheet">
     <link rel="icon" href="images/logo.webp" type="image/x-icon">
@@ -285,9 +285,9 @@
     </button>
 
     <!-- Scripts -->
-<script src="precios.js"></script>
-<script src="productos.js"></script>
-<script src="scripts.js"></script>
+<script src="js/precios.js"></script>
+<script src="js/productos.js"></script>
+<script src="js/scripts.js"></script>
 <script>
 // Definir atributos filtrables por categoría
 const atributosPorCategoria = {
