Update print statement from 'Hello' to 'Goodbye'

--- a/index.html
+++ b/index.html
@@ -283,12 +283,12 @@
 </section>
 
 <!-- Video Section -->
-<!--<section class="video-section">
+<section class="video-section">
     <div class="container">
         <h2 class="video-title">Estas son nuestras ofertas de la semana!!!</h2>
         <div class="video-container">
             <video controls autoplay muted loop poster="images/poster_celulares.jpg">
-                <source src="videos/colchon.mp4" type="video/mp4">
+                <source src="videos/center (1).mp4" type="video/mp4">
                     Tu navegador no soporta la reproducción de videos.
             </video>
         </div>
@@ -585,5 +585,6 @@ $(document).ready(function(){
 </body>
 
 </html>
+
 
 
