--- a/index.html
+++ b/index.html
@@ -184,19 +184,19 @@
                 <img src="carrusel/Heladera_Telefunken_TFKRF300GETFKHD300D_Gris_cdispenser_cfreezer_300_lts_ciclica.png" alt="Tablet" loading="lazy" onerror="this.onerror=null; this.src='images/nomedia_trans.png';">
             </div>
             <div class="slide">
-                <img src="carrusel/Cocina_Florencia_5838_SemiIndustrial_Inox_56_cm_multigas_svalvula.png" alt="Florencia semi industrial" loading="lazy" onerror="this.onerror=null; this.src='images/nomedia_trans.png';">
+                <img src="carrusel/Cocina_Florencia_5818_SemiIndustrial_Inox_56_cm_multigas.png" alt="Florencia semi industrial" loading="lazy" onerror="this.onerror=null; this.src='images/nomedia_trans.png';">
             </div>
             <div class="slide">
-                <img src="carrusel/TV_LED_RCA_55_G55P6UHDF_Google_4K_Smart.png" alt="RCA 55" loading="lazy" onerror="this.onerror=null; this.src='images/nomedia_trans.png';">
+                <img src="carrusel/Lavarropas_Kanji_KJHWMCFWT_6kg_Inverter_carga_frontal_Blanco.png" alt="RCA 55" loading="lazy" onerror="this.onerror=null; this.src='images/nomedia_trans.png';">
             </div>
             <div class="slide">
                 <img src="carrusel/Vent_Pie_Liliana_VVP20P_20_5_aspas_plasticas_90w.png" alt="Liliana VP20" loading="lazy" onerror="this.onerror=null; this.src='images/nomedia_trans.png';">
             </div>
             <div class="slide">
-                <img src="carrusel/Freidora_Steel_Home_sin_aceite_Kentuchy_5lts_1500w_digital.png" alt="Freidoras Kentuchy" loading="lazy" onerror="this.onerror=null; this.src='images/nomedia_trans.png';">
+                <img src="carrusel/Bici_Kanji_MTB_R29_Unisex_ALuminio_KJW29ALU_21v_freno_a_disco_suspencion_cbloqueo.png" alt="Freidoras Kentuchy" loading="lazy" onerror="this.onerror=null; this.src='images/nomedia_trans.png';">
             </div>
             <div class="slide">
-                <img src="carrusel/Notebook_Daewoo_Core_i3_8256_SSD_156_1025G1_FHD_Win_11.png" alt="Notebook Daewoo" loading="lazy" onerror="this.onerror=null; this.src='images/nomedia_trans.png';">
+                <img src="carrusel/TV_LED_Telefunken_32_TK3225S5A_atv_Android.png" alt="Notebook Daewoo" loading="lazy" onerror="this.onerror=null; this.src='images/nomedia_trans.png';">
             </div>
         </div>
         <button class="carousel-btn prev">❮</button>
@@ -210,8 +210,6 @@
             <span class="indicator" data-slide="5"></span>
             <span class="indicator" data-slide="6"></span>
             <span class="indicator" data-slide="7"></span>
-            <span class="indicator" data-slide="8"></span>
-            <span class="indicator" data-slide="9"></span>
         </div>
     </div>
 </section>
@@ -288,7 +286,7 @@
         <h2 class="video-title">Estas son nuestras ofertas de la semana!!!</h2>
         <div class="video-container">
             <video controls autoplay muted loop poster="images/poster_celulares.jpg">
-                <source src="videos/center (1).mp4" type="video/mp4">
+                <source src="videos/center.mp4" type="video/mp4">
                     Tu navegador no soporta la reproducción de videos.
             </video>
         </div>
@@ -578,13 +576,6 @@ $(document).ready(function(){
         }
     });
 });
-
-
-
 </script>
 </body>
-
 </html>
-
-
-
