Update print statement from 'Hello' to 'Goodbye'

--- a/index.html
+++ b/index.html
@@ -286,7 +286,7 @@
         <h2 class="video-title">Estas son nuestras ofertas de la semana!!!</h2>
         <div class="video-container">
             <video controls autoplay muted loop poster="images/poster_celulares.jpg">
-                <source src="videos/center (1).mp4" type="video/mp4">
+                <source src="videos/center.mp4" type="video/mp4">
                     Tu navegador no soporta la reproducción de videos.
             </video>
         </div>
@@ -583,6 +583,5 @@ $(document).ready(function(){
 </body>
 
 </html>
-
 
 
